@@ -1,3 +1,10 @@
+2001-09-10  Don Porter <dgp@users.sourceforge.net>
+
+	* generic/tclInitScript.h (initScript):
+	* win/tclWinInit.c (TCL_REGISTRY_KEY, TclpSetVariables):  Removed
+	vestiges of Tcl's old initialization from registry variables.
+	[Bug 455645]
+
 2001-09-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>
 
 	* generic/tclInt.decls: Also added 'TclWinFlushDirtyChannels' to
